--- a/src/app/recipe/routed/recipe-overview/recipe-overview.component.html
+++ b/src/app/recipe/routed/recipe-overview/recipe-overview.component.html
@@ -1,1 +1,1 @@
-<app-recipe-detail [recipe]="recipe"></app-recipe-detail>
+<app-recipe-detail [recipe]="recipe" [showDescription]="true" [showSuppression]="false"></app-recipe-detail>
